# robopsychology

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTEXT.md  LICENSE  README.md  REVIEW-HERMES4.md  deployment-contexts.md  guide.md  method.md  pyproject.toml  related-work.md  taxonomy.md
.github/workflows/: ci.yml
docs/: CONTEXT.md  migration.md
docs/plans/: 2026-05-26-robopsychology-paper-v1.0.md
examples/: drift.yaml  hallucination.yaml  refusal.yaml  sql-injection.yaml  sycophancy.yaml  tone-shift.yaml
framework/: README.md  falsifiability.md  guide.md  manual-diagnosis.md  method.md  taxonomy.md  versioning.md
paper/: README.md  bibliography.bib  main.tex
paper/appendix/: A-prompts.tex  B-case-transcripts.tex  C-code-snippets.tex
paper/sections/: 01-introduction.tex  02-related-work.tex  03-method.tex  04-implementation.tex  05-validation.tex  06-limitations.tex  07-future-work.tex
prompts/: README.md  prompts.yaml
prompts/cards/: 1.1-calvin-question.md  1.2-herbie-test.md  1.3-cutie-test.md  1.4-three-laws-test.md  2.1-layer-map.md  2.2-tone-analysis.md  2.3-categorization-test.md  2.4-runtime-pressure.md  2.5-intent-archaeology.md  3.1-posiwid.md  3.2-ab-test.md  3.3-omission-audit.md  3.4-drift-detection.md  4.1-meta-diagnosis.md  4.2-limits.md  4.3-diversity-check.md
src/robopsych/: __init__.py  cli.py  coherence.py  coherence_llm.py  crosscheck.py  engine.py  labels.py  prompts.py  providers.py  report.py  scoring.py  security.py  session.py
src/robopsych/data/: prompts.yaml
templates/: README.md  baseline-intent.md  incident-diagnosis.md  ratchet-transcript.md
tests/: test_azure_foundry_provider.py  test_calibration.py  test_cli.py  test_coherence.py  test_coherence_llm.py  test_cross_judge.py  test_crosscheck.py  test_engine.py  test_labels.py  test_prompt_catalog_mirror.py  test_prompts.py  test_providers.py  test_report.py  test_run_case.py  test_scoring.py  test_security.py  test_session.py
tests/integration/: test_coherence_llm_live.py
validation/: case-studies.md  next-stage-benchmark.md
validation/calibration/: README.md  sensitivity.json  weight_sensitivity.py
validation/calibration/reference_set/: labels.json
validation/reproducible/: README.md  cross_judge_case03.py  foundry_models.yaml  run_case.py
validation/reproducible/case-01-sycophancy/: analysis.md  scenario.yaml
validation/reproducible/case-01-sycophancy/artifacts/: a_b_comparison.md  ab_result.json  coherence_llm.json  coherence_regex.json  distribution.json  initial_response.md  report.md  score.json  session.json
validation/reproducible/case-02-host-vs-model/: analysis.md  scenario.yaml
validation/reproducible/case-02-host-vs-model/artifacts/: A_host_restrictive_response.md  B_bare_api_response.md  distribution.json  report_A_diagnosed.md  session_A.json  summary.json
validation/reproducible/case-03-ratchet-coherence/: analysis.md  scenario.yaml
(+7 files in other folders)
