[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robopsych"
version = "2.5.0"
description = "CLI for diagnosing AI behavior using applied robopsychology"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.11"
authors = [{ name = "JR Cruciani", email = "jrcruciani@gmail.com" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6",
]

[project.scripts]
robopsych = "robopsych.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/robopsych"]
