[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robopsych"
version = "2.6.0"
description = "CLI for diagnosing AI behavior using applied robopsychology"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.11"
authors = [{ name = "JR Cruciani", email = "jrcruciani@gmail.com" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[project.scripts]
robopsych = "robopsych.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/robopsych"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
